[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bd-utils"
version = "0.1.0"
description = "Databricks dbutils-compatible adapter for local and Databricks runtimes."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "bd-utils contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
