[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bd-utils"
version = "0.1.1"
description = "Databricks dbutils-compatible adapter for local and Databricks runtimes."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "bd-utils contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "pre-commit"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["bdutils"]
